chore: Update column width in section-colums component

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Sunshine School ofrece una educación de alta calidad con métodos innovadores y estándares académicos rigurosos. Fomentamos la creatividad y el desarrollo personal en un ambiente acogedor y seguro."
+    />
+    <title>Sunshine School | Educación Innovadora y Creativa</title>
   </head>
   <body>
     <div id="root"></div>
