feat: Agregar lazy loading para imágenes en los archivos de favicon

--- a/index.html
+++ b/index.html
@@ -4,11 +4,62 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sunshine School | Educación Innovadora y Creativa</title>
+
+    <meta property="og:type" content="website" />
     <meta
       name="description"
       content="Sunshine School ofrece una educación de alta calidad con métodos innovadores y estándares académicos rigurosos. Fomentamos la creatividad y el desarrollo personal en un ambiente acogedor y seguro."
     />
-    <title>Sunshine School | Educación Innovadora y Creativa</title>
+    <meta
+      name="twitter:description"
+      content="Explora Sunshine School, un lugar donde el aprendizaje y la diversión se encuentran."
+    />
+    <meta name="twitter:image" content="public/screen-sunshine.jpg" />
+    <meta property="og:image" content="public/screen-sunshine.jpg" />
+    <meta
+      name="twitter:title"
+      content="Explora Sunshine School: Aprendizaje y Diversión"
+    />
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "name": "Sunshine School",
+        "url": "https://iamyare.github.io/sunshine-shool/"
+      }
+    </script>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/img/favicon-32x32.png"
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="public/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="public/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="public/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="public/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="public/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
   </head>
   <body>
     <div id="root"></div>
